Mild changes to the guild DB format

--- a/src/utils/languages/languages.json
+++ b/src/utils/languages/languages.json
@@ -206,6 +206,10 @@
         "nodecurl": {
             "english": "You can ping http://node.tockanest.com (or access [The Node 'Website'](http://node.tockanest.com:7072), if it still shows the node as offline, press F5 and reload the page, the monitor can be buggy sometimes. ).\nTo use curl requests, use: http://node.tockanest.com:7072",
             "portugues": "Você pode pingar http://node.tockanest.com (ou acessar o ['Site do Node'](http://node.tockanest.com:7072), se ainda mostrar o node como offline, pressione F5 e recarregue a página, o monitor as vezes é bugado. )\nPara usar curl requests, utilize: http://node.tockanest.com:7072"
+        },
+        "missing": {
+            "english": "Hey buddy, seems like you're missing some permissions, are you sure you can access this command?\nPlease, contact someone that has the \"Manage Guild\" permission to use this command.",
+            "portugues": "Hey, meu camarada, parece que você não tem algumas permissões, você tem certeza que pode utilizar este comando?\nPor favor, contate alguém que tenha a permissão de \"Gerenciar Servidor\" para utilizar este comando."
         }
 
 
